Added Get mappings for all controllers. Added Integration tests for all controllers.